# WxChillGuy

./: CMakeLists.txt  README.md  conanfile.txt
src/: chillguypanel.cpp  chillguypanel.h  imagepanel.cpp  imagepanel.h  main.cpp  main.h
